--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Anton-Web-Portfolio</title>
+    </head>
 
+    <body>
+        <h1>Welcome To Anton's Web Portfolio</h1>
+        <h2>These are projects that I have been working on!</h2>
+        <hr>
+
+        <h3><a href="./public/movie-ranking.html">Movie Ranking</a></h3>
+        <img src="./assets/images/movies.PNG" alt="Movie Ranking Preview" height="200">
+        <br>
+
+        <h3><a href="./public/birthday-invite.html">Birthday Invite</a></h3>
+        <img src="./assets/images/birthday.PNG" alt="Birthday Invite Preview" height="200">
+        <hr>
+
+        <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+    </body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
