--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,10 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: (408) 390-8937</p>
+<p>Email: anton.v.zhuk@gmail.com</p>
+<p>Mailing Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  1578 Sabina Way<br />
+  San Jose, CA 95118<br />
+  United States <br />
 </p>
+<a href="../index.html">Go Back</a>
