--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,11 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>Best Movies According to Anton</h1>
+<h2>My Top 3 Movies of All-Time</h2>
+<hr>
+<h3>Brat 2</h3>
+<p>A very interesting take of Russian views on the United States in an almost "so bad, it's good" quality</p>
+<h3>Brat 1</h3>
+<p>A cult classic Russian criminal movie that acts as a zeitgeist of post-collapse 1990's Russia</p>
+<h3>SpiderMan: Across The Spiderverse</h3>
+<p>Very well stylized and a very fun movie to watch</p>
+<hr>
+<a href="../index.html">Go Back</a>
